--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-#### LICENSE KEY ####
-LICENSE_KEY=
-#### LICENSE KEY ####
-
-### DOMAIN JIKA INGIN DIGANTI###
-DOMAIN=gmail.com
-### DOMAIN ###
+Tyuuu
